--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "description": "",
   "devDependencies": {
     "css-loader": "^5.0.1",
+    "file-loader": "^6.2.0",
     "jquery": "^3.5.1",
     "less": "^3.12.2",
     "less-loader": "^7.0.2",
