--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
+    "babel-loader": "^8.0.0-beta.0",
     "jquery": "^3.5.1"
   },
   "description": "",
@@ -19,6 +22,7 @@
     "less": "^3.12.2",
     "less-loader": "^7.0.2",
     "style-loader": "^2.0.0",
+    "url-loader": "^4.1.1",
     "webpack": "^5.4.0",
     "webpack-cli": "^4.2.0"
   }
