--- a/package.json
+++ b/package.json
@@ -9,18 +9,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/core": "^7.12.3",
-    "@babel/preset-env": "^7.12.1",
-    "babel-loader": "^8.0.0-beta.0",
     "jquery": "^3.5.1"
   },
   "description": "",
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "7",
+    "babel-preset-es2015": "^6.24.1",
     "css-loader": "^5.0.1",
     "file-loader": "^6.2.0",
     "jquery": "^3.5.1",
     "less": "^3.12.2",
     "less-loader": "^7.0.2",
+    "mini-css-extract-plugin": "^1.3.0",
     "style-loader": "^2.0.0",
     "url-loader": "^4.1.1",
     "webpack": "^5.4.0",
