--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "jquery": "^3.5.1"
+    "jquery": "^3.5.1",
+    "vue": "^2.6.12"
   },
   "description": "",
   "devDependencies": {
@@ -18,12 +19,15 @@
     "babel-preset-es2015": "^6.24.1",
     "css-loader": "^5.0.1",
     "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^4.5.0",
     "jquery": "^3.5.1",
     "less": "^3.12.2",
     "less-loader": "^7.0.2",
     "mini-css-extract-plugin": "^1.3.0",
     "style-loader": "^2.0.0",
     "url-loader": "^4.1.1",
+    "vue-loader": "^15.9.5",
+    "vue-template-compiler": "^2.6.12",
     "webpack": "^5.4.0",
     "webpack-cli": "^4.2.0"
   }
