--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
-    "start": "webpack-dev-server"
+    "build": "webpack --config ./build/dev.config.js",
+    "start": "webpack-dev-server --config ./build/run.config.js --open"
   },
   "author": "",
   "license": "ISC",
@@ -31,6 +31,7 @@
     "vue-template-compiler": "^2.6.12",
     "webpack": "^4.32.2",
     "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "^3.5.1"
+    "webpack-dev-server": "^3.5.1",
+    "webpack-merge": "^5.3.0"
   }
 }
